--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p><strong>نام:</strong> محمدرضا لطفی</p>
   <p><strong>رشته:</strong> مهندسی کامپیوتر</p>
   <p><strong>متولد:</strong> 1381/05/16 - استان ایلام، شهرستان دره شهر</p>
-  <p><strong>ایمیل:</strong>  MohammadrezaLotfi@gmail.com</p>
+  <p><strong>ایمیل:</strong>  Mohammadreza.81168116@gmail.com</p>
   <p><strong>شماره تماس:</strong> 09182638773</p>
   <p><strong>لینک گیت هاب :</strong> <a href="https://github.com/Mohammadreza-L" target="_blank">https://github.com/Mohammadreza-L</a></p>
 
