--- a/index.html
+++ b/index.html
@@ -3,42 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <title>رزومه محمدرضا لطفی</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>رزومه</h1>
+<div class="root">
+  <h1>رزومه محمدرضا لطفی</h1>
 
-  <h2>مشخصات فردی</h2>
-  <p><strong>نام:</strong> محمدرضا لطفی</p>
-  <p><strong>رشته:</strong> مهندسی کامپیوتر</p>
-  <p><strong>متولد:</strong> 1381/05/16 - استان ایلام، شهرستان دره شهر</p>
-  <p><strong>ایمیل:</strong>  Mohammadreza.81168116@gmail.com</p>
-  <p><strong>شماره تماس:</strong> 09182638773</p>
-  <p><strong>لینک گیت هاب :</strong> <a href="https://github.com/Mohammadreza-L" target="_blank">https://github.com/Mohammadreza-L</a></p>
+  <!-- مشخصات فردی -->
+  <section class="section card personal-info">
+    <h2>مشخصات فردی</h2>
+    <p><strong>نام:</strong> محمدرضا لطفی</p>
+    <p><strong>رشته:</strong> مهندسی کامپیوتر</p>
+    <p><strong>متولد:</strong> 1381/05/16 - استان ایلام، شهرستان دره شهر</p>
+    <p><strong>ایمیل:</strong> Mohammadreza.81168116@gmail.com</p>
+    <p><strong>شماره تماس:</strong> 09182638773</p>
+    <p><strong>لینک گیت هاب:</strong> 
+      <a href="https://github.com/Mohammadreza-L" target="_blank">github.com/Mohammadreza-L</a>
+    </p>
+  </section>
 
-  <hr>
+  <!-- تحصیلات -->
+  <section class="section card education">
+    <h2>تحصیلات</h2>
+    <ul>
+      <li>کارشناسی مهندسی کامپیوتر - دانشگاه شهید چمران اهواز (1400 تا 1404)</li>
+    </ul>
+  </section>
 
-  <h2>تحصیلات</h2>
-  <ul>
-    <li>کارشناسی مهندسی کامپیوتر - دانشگاه شهید چمران اهواز (1400 تا 1404)</li>
-  </ul>
+  <!-- مهارت‌ها -->
+  <section class="section card skills">
+    <h2>مهارت‌ها</h2>
+    <div class="skill-badges">
+      <span class="skill-badge">C++</span>
+      <span class="skill-badge">Java</span>
+      <span class="skill-badge">Python</span>
+      <span class="skill-badge">SQL</span>
+    </div>
+  </section>
 
-  <hr>
-
-  <h2>مهارت‌ها</h2>
-  <ul>
-    <li>زبان‌های برنامه‌نویسی: C++, Java, Python</li>
-    <li>طراحی پایگاه داده (SQL)</li>
-  </ul>
-
-
-
-  <h2>افتخارات و فعالیت‌ها</h2>
-  <ul>
-    <li>عضو انجمن علمی مهندسی کامپیوتر</li>
-  </ul>
-
-  <hr>
+  <!-- افتخارات و فعالیت‌ها -->
+  <section class="section card activities">
+    <h2>افتخارات و فعالیت‌ها</h2>
+    <ul>
+      <li>عضو انجمن علمی مهندسی کامپیوتر</li>
+    </ul>
+  </section>
+</div>
 
 </body>
 </html>
